--- a/Menu/Menu.csproj
+++ b/Menu/Menu.csproj
@@ -156,6 +156,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="babel.config.json" />
+    <Content Include=".gitignore" />
     <Content Include="webpack.config.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
